...
    <string name="run_starting_point_label">Starting Point:</string>
    <string name="run_difficulty_label">Difficulty:</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="notification">Notifications</string>

    <string name="miles_text">%1$s Miles</string>
    <string name="steps_text">%1$s Steps</string>
    <string name="date_text">On: %1$s</string>
    <string name="time_text">Time: %1$s</string>
...
    </string-array>

    <string name="favorite_indicator">favorite indicator</string>
    <string name="start_run">Start Run</string>
    <string name="user_height">user_height</string>
    <string name="no_value">--</string>
    <string name="user_string">user</string>

    <string name="teammate_name">Name:</string>
    <string name="teammate_name_hint">Teammate Name</string>
    <string name="teammate_email">Email:</string>
    <string name="teammate_email_hint">name@gmail.com</string>
    <string name="invite_done_text">Invite</string>
    <string name="invite_pending">Pending</string>

    <string name="invitation_requested_text">Team Request From:</string>
    <string name="requester_name">Requester Name</string>
    <string name="requester_email">Requester Email</string>
    <string name="acceptButtonText">Accept</string>
...

    <string name="response_header">Send Response</string>
    <string name="going_button">Im Going</string>
    <string name="bad_time_button">Not Going, Bad Time</string>
    <string name="bad_route_button">Not Going, Bad Route</string>

    <string name="no_proposed_run">There is no Proposed Run</string>
</resources>

